--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@heroicons/react": "^2.2.0",
     "@primer/octicons-react": "^19.15.2",
     "antd": "^5.25.4",
     "axios": "^1.9.0",
