--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,14 @@
     "antd": "^5.25.4",
     "axios": "^1.9.0",
     "frontend": "file:",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.1"
+    "react-leaflet": "^5.0.0",
+    "react-router-dom": "^7.6.1",
+    "recharts": "^2.15.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
